<resources>
    <string name="app_name">Test</string>
    <string name="hello">Hello</string>
    <string name="world">World!</string>
    <string name="name">021117111董一帆</string>
    <string name="bmi">BMI指数测定</string>
    <string name="signIn">注册️</string>
    <string name="logIn">登录️</string>
    <string name="userName_warning">请输入用户名</string>
    <string name="userPwd_warning">请输入密码</string>
    <string name="alert">修改</string>
    <string name="play">播放</string>
    <string name="cease">暂停</string>
</resources>
